@@ -33,7 +33,7 @@
 #include "sg_lib_data.h"
 
 
-const char * sg_lib_version_str = "1.42 20080313";    /* spc-4 rev 13 */
+const char * sg_lib_version_str = "1.43 20080316";    /* spc-4 rev 13 */
 
 struct sg_lib_value_name_t sg_lib_normal_opcodes[] = {
     {0, 0, "Test Unit Ready"},
